# CoderAI

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BUGFIX_MESSAGE_OBJECTS.md  CHANGELOG.md  CHANGELOG_NEW_COMMANDS.md  CLAUDE.md  COMMANDS.md  EXAMPLES.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE  LMSTUDIO_CONFIG.md  LMSTUDIO_QUICKREF.md  LMSTUDIO_UPDATE_SUMMARY.md  Makefile  NEW_FEATURES.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SECURITY.md  SUMMARY.txt  TEST_RESULTS.md  TODO_STATUS.md  find_primes.py  manual_parallel_subagents.py  manual_subagent_delegation.py  pyproject.toml  requirements-dev.txt  requirements.txt  resources.rb  setup.py  test_installation.py  test_parallel_subagents.py  test_subagent_delegation.py
.claude/: settings.local.json
.coderAI/: current_plan.json
.coderAI/agents/: architect.md  build-error-resolver.md  chief-of-staff.md  code-reviewer.md  database-reviewer.md  doc-updater.md  e2e-runner.md  go-build-resolver.md  go-reviewer.md  harness-optimizer.md  loop-operator.md  planner.md  python-reviewer.md  refactor-cleaner.md  security-reviewer.md  tdd-guide.md  test-planner.md
.coderAI/rules/: 001-common-principles.md  101-python-standards.md
.coderAI/skills/: security-audit.md  tdd-workflow.md  test-skill.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
coderAI/: __init__.py  agent.py  agent_loop.py  agent_tracker.py  agents.py  binary_manager.py  cli.py  code_chunker.py  code_indexer.py  config.py  context.py  context_controller.py  context_selector.py  cost.py  error_policy.py  events.py  history.py  hooks_manager.py  locks.py  notepad.py  project_layout.py  read_cache.py  safeguards.py  skills.py  system_prompt.py  tool_executor.py  tool_routing.py
coderAI.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
coderAI/bridge/: __init__.py  chat_reference.py  commands.py  controller.py  serializers.py  streaming.py  tool_metadata.py
coderAI/cli/: __init__.py  bootstrap.py  config_cmd.py  history_cmd.py  index_cmd.py  main.py  mcp_cmd.py  run_cmd.py  setup.py  setup_cmd.py  tasks_cmd.py  utils.py
coderAI/context/: __init__.py  code_chunker.py  code_indexer.py  context.py  context_controller.py  context_selector.py
coderAI/core/: __init__.py  agent.py  agent_capabilities.py  agent_loop.py  agent_session.py  agent_tracker.py  agents.py  execution_context.py  jobs.py  loop_guard.py  permissions.py  provenance.py  services.py  session_bootstrap.py  tool_error_codes.py  tool_executor.py  tool_results.py  tool_routing.py  turn.py
coderAI/embeddings/: __init__.py  base.py  factory.py  local.py  openai.py
coderAI/ipc/: __init__.py  chat_reference.py  entry.py  jsonrpc_server.py  streaming.py
coderAI/llm/: __init__.py  _token_counter.py  anthropic.py  base.py  cloud_base.py  deepseek.py  factory.py  gemini.py  groq.py  lmstudio.py  local_base.py  meta.py  ollama.py  openai.py
coderAI/mcp_servers/: __init__.py  git_extended.py
coderAI/prompts/: __init__.py  browser.mdx  compose.py  desktop.mdx  interaction.mdx  intro.mdx  output_style.mdx  runtime.mdx  tail.mdx
coderAI/skills/: __init__.py  skill_loader.py  skill_manager.py  skill_registry.py
coderAI/system/: __init__.py  command_safety.py  config.py  constants.py  cost.py  display.py  error_policy.py  events.py  fsperms.py  history.py  hooks_manager.py  locks.py  logging_setup.py  proc.py  project_layout.py  read_cache.py  redaction.py  retry.py  safeguards.py  sandbox.py  trust.py
coderAI/tools/: __init__.py  _detect.py  base.py  browser.py  context_manage.py  desktop.py  discovery.py  filesystem.py  format.py  git.py  git_extended.py  jobs.py  lint.py  mcp.py  mcp_oauth.py  memory.py  multi_edit.py  notepad.py  package_manager.py  planning.py  project.py  refactor.py  repl.py  search.py  semantic_search.py  skills.py  subagent.py  tasks.py  terminal.py  testing.py  undo.py  vision.py  web.py
coderAI/tui/: __init__.py  app.py  clipboard.py  commands.py  controller.py  diff_render.py  export.py  help_menu.py  listeners.py  platform.py  project.py  prompt_history.py  protocol.py  rendering.py  screens.py  serializers.py  session_setup.py  slash.py  state.py  streaming.py  theme.py  timeline_append.py  timeline_render.py  tool_metadata.py  widgets.py
coderAI/types/: __init__.py  tool_results.py
coderAI/ui/: __init__.py  display.py  interactive.py  streaming.py
docs/: ARCHITECTURE.md  CHAT_EVENTS.md  CLAUDE.md  COMMANDS.md  EXAMPLES.md  INSTALL.md  REFACTOR_PLAN.md
docs/archive/: AUDIT_IMPLEMENTATION_PLAN.md
tests/: conftest.py  test_agent.py  test_agent_tracker.py  test_anthropic_stop_reasons.py  test_anthropic_streaming.py  test_app_layout.py  test_app_render_cache.py  test_apply_diff.py  test_approval_always_yolo.py  test_approval_cross_thread.py  test_approval_screen.py  test_bridge_server.py  test_budget_summarization.py  test_chat_reference.py  test_checkpoints.py  test_clipboard.py  test_code_chunker.py  test_code_indexer_incremental.py  test_coderAI.py  test_concurrent_tools.py  test_config_precedence.py  test_context.py  test_context_manage.py  test_desktop.py  test_diff_render.py  test_embeddings.py  test_event_contract.py  test_export.py  test_filesystem_metadata.py  test_filesystem_symlink_guard.py  test_format.py  test_git_extended.py  test_git_extended_mcp.py  test_git_tools_truncation.py  test_groq_provider.py  test_history_continue.py  test_hooks_lifecycle.py  test_integration.py  test_ipc_server.py  test_job_tools.py  (+77 more)
tests/cli/: test_history_cmd.py  test_run_cmd.py
tests/context/: test_code_chunker.py  test_context.py
tests/core/: test_agent.py  test_agent_tracker.py  test_concurrent_tools.py  test_loop_backoff.py  test_post_tool_continuation.py  test_services.py  test_subagent.py  test_tool_discovery.py
tests/embeddings/: test_embeddings.py
tests/fixtures/: ndjson_protocol_golden.jsonl
tests/integration/: test_audit_read_search.py  test_coderAI.py  test_new_features.py
ui/: PROTOCOL.md  package-lock.json  package.json  tsconfig.json
(+128 files in other folders)
