[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coderAI"
version = "0.3.0"
description = "Intelligent coding agent CLI with a Textual terminal UI and MCP tools"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "CoderAI", email = "hello@coderai.dev"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "textual>=0.80.0",
    "rich>=13.7.0",
    "click>=8.1.7",
    "openai>=1.10.0",
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "aiohttp>=3.9.0",
    "tiktoken>=0.5.2",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "groq>=0.4.2",
    "certifi>=2024.2.2",
    "chromadb>=0.4.22",
    "html2text>=2024.2.26",
]

[project.optional-dependencies]
web = [
    "pypdf>=3.0.0",
]
browser = [
    "playwright>=1.45.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.31.0.0",
]

[project.urls]
Homepage = "https://github.com/adityaanilraut/CoderAI"
Releases = "https://github.com/adityaanilraut/CoderAI/releases"
Issues = "https://github.com/adityaanilraut/CoderAI/issues"
Source = "https://github.com/adityaanilraut/CoderAI"

[project.scripts]
coderAI = "coderAI.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["coderAI*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
# load_dotenv() must run before package imports read env vars
"coderAI/cli/main.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests/"]

# Per-module strict typing (Phase 4). This list ONLY GROWS — never shrink it.
# Modules here must pass disallow_untyped_defs + check_untyped_defs +
# warn_unused_ignores. See docs/CLAUDE.md ("Typing ratchet").
[[tool.mypy.overrides]]
module = [
  "coderAI.system.*",
  "coderAI.llm.*",
  "coderAI.bridge.*",
  "coderAI.context.*",
  "coderAI.core.execution_context",
  "coderAI.core.tool_error_codes",
  "coderAI.core.services",
  "coderAI.core.agent_tracker",
]
disallow_untyped_defs = true
check_untyped_defs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
# Exclude long-running benchmarks from the default run (and CI). Opt in with
# `pytest -m slow`.
addopts = "-m 'not slow'"
markers = [
    "slow: long-running benchmark; excluded from the default run (use -m slow to include)",
]

