[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coderAI"
version = "0.3.0"
description = "Intelligent coding agent CLI with a Textual terminal UI and MCP tools"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "CoderAI", email = "hello@coderai.dev"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "textual>=0.80.0",
    "rich>=13.7.0",
    "click>=8.1.7",
    "openai>=1.10.0",
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "aiohttp>=3.9.0",
    "tiktoken>=0.5.2",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "groq>=0.4.2",
    "certifi>=2024.2.2",
    "html2text>=2024.2.26",
]

[project.optional-dependencies]
# Semantic code search (`coderAI index` / `search`, semantic_search tool). Pulls
# in ChromaDB — a heavy dependency, so it is opt-in to keep `pip install coderAI`
# light. Without it, only these features are unavailable; everything else works.
semantic = [
    "chromadb>=0.4.22",
]
web = [
    "pypdf>=3.0.0",
]
browser = [
    "playwright>=1.45.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1.0",
    "pytest-socket>=0.7.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.31.0.0",
    "pre-commit>=3.5.0",
    # The test suite exercises the semantic indexer, so dev installs need ChromaDB.
    "coderAI[semantic]",
]

[project.urls]
Homepage = "https://github.com/adityaanilraut/CoderAI"
Releases = "https://github.com/adityaanilraut/CoderAI/releases"
Issues = "https://github.com/adityaanilraut/CoderAI/issues"
Source = "https://github.com/adityaanilraut/CoderAI"

[project.scripts]
coderAI = "coderAI.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["coderAI*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
# load_dotenv() must run before package imports read env vars
"coderAI/cli/main.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests/"]

# Per-module strict typing (Phase 4). This list ONLY GROWS — never shrink it.
# Modules here must pass disallow_untyped_defs + check_untyped_defs +
# warn_unused_ignores. See docs/CLAUDE.md ("Typing ratchet").
[[tool.mypy.overrides]]
module = [
  "coderAI.system.*",
  "coderAI.llm.*",
  "coderAI.bridge.*",
  "coderAI.context.*",
  "coderAI.core.execution_context",
  "coderAI.core.tool_error_codes",
  "coderAI.core.services",
  "coderAI.core.agent_tracker",
  "coderAI.core.provenance",
  "coderAI.core.permissions",
  "coderAI.core.loop_guard",
  "coderAI.core.tool_executor",
  "coderAI.core.turn",
  "coderAI.core.tool_routing",
  "coderAI.core.agents",
  "coderAI.cli.*",
]
disallow_untyped_defs = true
check_untyped_defs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
# Exclude long-running benchmarks from the default run (and CI). Opt in with
# `pytest -m slow`.
# --disable-socket enforces the "tests never touch the real network" invariant:
# the suite mocks all HTTP, so a real connection means a leak. Loopback servers
# (SSRF redirect harness, OAuth callback) opt back in with @pytest.mark.enable_socket;
# --allow-unix-socket keeps AF_UNIX (asyncio self-pipe, subprocess) working.
addopts = "-m 'not slow' --disable-socket --allow-unix-socket"
markers = [
    "slow: long-running benchmark; excluded from the default run (use -m slow to include)",
    "security: red-team / security regression test. Auto-applied to everything under tests/security/; run the suite in isolation with `pytest -m security`.",
]

